--- a/.github/workflows/webservice.yml
+++ b/.github/workflows/webservice.yml
@@ -1,25 +1,23 @@
-name: webapp image - build and push
+name: webservice image - build and push
 on:
   push:
-    tags:
-      - 'v*.*.*'
-    # branches:
-    #   - main
-    # paths:
-    #   - 'webapp/**'
-    #   - '.github/workflows/_webapp.yml'
-    #   - '.github/workflows/webapp.yml'
-  # pull_request:
-  #   branches:
-  #     - main
-  #   paths:
-  #     - 'webapp/**'
-  #     - '.github/workflows/_webapp.yml'
-  #     - '.github/workflows/webapp.yml'
+    branches:
+      - main
+    paths:
+      - 'webservice/**'
+      - '.github/workflows/_webservice.yml'
+      - '.github/workflows/webservice.yml'
+  pull_request:
+    branches:
+      - main
+    paths:
+      - 'webservice/**'
+      - '.github/workflows/_webservice.yml'
+      - '.github/workflows/webservice.yml'
   workflow_dispatch:
 jobs:
-  webapp:
-    uses: 7sergaza7/microservice/.github/workflows/_webapp.yml@main
+  webservice:
+    uses: 7sergaza7/webservice/.github/workflows/_webservice.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
