--- a/.github/workflows/k8s-webservice.yml
+++ b/.github/workflows/k8s-webservice.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   k8s-wenbservice:
-    uses: 7sergaza7/webservice/.github/workflows/_k8s.yml@main
+    uses: 7sergaza7/webservice/.github/workflows/_k8s-webservice.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
