--- a/.github/workflows/full-cicd-webservice.yml
+++ b/.github/workflows/full-cicd-webservice.yml
@@ -1,10 +1,10 @@
-name: full-cicd-webapp
+name: full-cicd-webservice
 on:
   workflow_dispatch:
 
 jobs:
-  webapp:
-    uses: 7sergaza7/microservice/.github/workflows/_webapp.yml@main
+  webservice:
+    uses: 7sergaza7/webservice/.github/workflows/_webservice.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -12,8 +12,8 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
  
   eks:
-    needs: webapp
-    uses: 7sergaza7/microservice/.github/workflows/_eks.yml@main
+    needs: webservice
+    uses: 7sergaza7/webservice/.github/workflows/_infra-eks.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -21,7 +21,7 @@ jobs:
       AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
   k8s:
     needs: eks
-    uses: 7sergaza7/microservice/.github/workflows/_k8s.yml@main
+    uses: 7sergaza7/webservice/.github/workflows/_k8s-webservice.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
