--- a/.github/workflows/infra-eks.yml
+++ b/.github/workflows/infra-eks.yml
@@ -1,4 +1,4 @@
-name: infra-provisioning-eks
+name: infra-eks
 
 on:
   # push:
@@ -18,7 +18,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  eks-cluster:    
+  infra-eks:    
     uses: 7sergaza7/webservice/.github/workflows/_infra-eks.yml@main
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
